--- a/loginPage.html
+++ b/loginPage.html
@@ -36,7 +36,7 @@
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="loginPage.html">Login</a></li>
-                      <li><a class="dropdown-item" href="#">Register</a></li>
+                      <li><a class="dropdown-item" href="signupPage.html">Register</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="index.html">Log out</a></li>
                     </ul>
@@ -60,12 +60,14 @@
                   <h3 class="card-title">Login to Apply Smart</h3>
                 </div>
                 <hr class="mb-4 text-success">
-                <form>
+                <form class="needs-validation" novalidate>
                     <div class="row mb-3">
                       <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
                       <div class="col-sm-10">
                         <input type="email" class="form-control" id="inputEmail3" required>
-                        
+                        <div class="valid-feedback">
+                          Looks good!
+                        </div>
                       </div>
                       
                     </div>
