--- a/signupPage.html
+++ b/signupPage.html
@@ -49,9 +49,9 @@
           </div>
       </div>
   </nav>
-      <div class= "d-flex h-100 justify-content-center bg-success" width="100" height="100" style="--bs-bg-opacity: 0.1;" >
+      <div class= "d-flex justify-content-center bg-success" width="100" height="100" style="--bs-bg-opacity: 0.1;" >
 
-        <div class="card m-5 px-2 border border-success" style="width: 41rem; height: 60rem;">
+        <div class="card m-5 px-2 border border-success" style="width: 41rem; height: auto;">
             <div class="card-body ">
                 
                 <div class="text-center mb-4">
