modified the aunthication

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                   More options
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="loginPage.html">Login</a></li>
-                  <li><a class="dropdown-item" href="signupPage.html">Register</a></li>
+                  <li><a class="dropdown-item" href="loginPage.php">Login</a></li>
+                  <li><a class="dropdown-item" href="signupPage.php">Register</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Log out</a></li>
                 </ul>
@@ -65,8 +65,8 @@
             </div>
             
             <div class="my-3">
-              <a class="btn btn-success" href="signupPage.html" role="button">Create a Profile</a>
-              <a class="btn btn-outline-success" href="loginPage.html" role="button">Login</a>
+              <a class="btn btn-success" href="signupPage.php" role="button">Create a Profile</a>
+              <a class="btn btn-outline-success" href="loginPage.php" role="button">Login</a>
             </div>
           </div>
       
